--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
             class="bg-video-desktop"
             style="height: 100%; min-width: 100%; z-index: -1; margin-top: 20px"
           /> -->
-          <img class="img-fluid" 
+          <img 
             style="height: 100%; max-width: 100%; z-index: -1; margin-top: 75px; margin-bottom: 50px;"
             src="./assets/images/main-img.png" 
             alt="Landing_Page_Image"
