Reverted back all the changes

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
         So if we plan to rollback to previous gif's try removing styles of this div
         and also go to line 1704-1712 & 1743-1744 -uncomment those piece of code and  -->
         <div style="margin-top:auto; background: #F5FFFF;" >
-          <img
+          <!-- <img
             src="https://boringnews.co/assets/images/Final-Mobile-GIF_00.gif"
             alt="mobile background"
             class="bg-video-mobile"
@@ -291,12 +291,12 @@
             alt="desktop background"
             class="bg-video-desktop"
             style="height: 100%; min-width: 100%; z-index: -1; margin-top: 20px"
-          />
-          <!-- <img 
+          /> -->
+          <img class="img-fluid" 
             style="height: 100%; max-width: 100%; z-index: -1; margin-top: 75px; margin-bottom: 50px;"
             src="./assets/images/main-img.png" 
             alt="Landing_Page_Image"
-          /> -->
+          />
           <div class="scroll-btn" style="cursor: pointer">
             <div class="icon-scroll">
               <div class="point"><i class="arrow"></i></div>
