--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
             style="height: 100%; min-width: 100%; z-index: -1; margin-top: 20px"
           /> -->
           <img class="img-fluid" 
-            style="height: 100%; max-width: 100%; z-index: -1; margin-top: 75px; margin-bottom: 50px;"
+            style="height: 100%; width: 100%; z-index: -1; margin-top: 75px; margin-bottom: 50px;"
             src="./assets/images/main-img.png" 
             alt="Landing_Page_Image"
           />
